[tool.poetry]
name = "requests-connection-manager"
version = "1.0.0"
description = "A Python package that extends requests with connection pooling, retries, rate limiting, and circuit breaker functionality"
authors = ["Charles Gude <charles@example.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/charlesgude/requests-connection-manager"
repository = "https://github.com/charlesgude/requests-connection-manager"
keywords = ["requests", "http", "connection", "pooling", "retry", "rate-limiting", "circuit-breaker"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.0"
urllib3 = "^1.26.0"
ratelimit = "^2.2.1"
pybreaker = "^1.2.0"
httpx = "^0.28.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
pytest-cov = "^4.0.0"
black = "^22.0.0"
flake8 = "^5.0.0"
mypy = "^1.0.0"
isort = "^5.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["requests_connection_manager"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true